--- a/app/src/main/res/layout/applicationpart_item.xml
+++ b/app/src/main/res/layout/applicationpart_item.xml
@@ -23,113 +23,102 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:id="@+id/imageView_menu"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
+                android:layout_alignTop="@+id/textView_Title"
                 android:layout_marginRight="16dp"
-                android:layout_marginTop="16dp"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:srcCompat="@mipmap/ic_more_vert_black_24dp" />
 
             <TextView
                 android:id="@+id/textView_Title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_toLeftOf="@+id/imageView"
-                android:layout_toStartOf="@+id/imageView"
+                android:layout_toLeftOf="@+id/imageView_menu"
+                android:layout_toStartOf="@+id/imageView_menu"
                 android:layout_weight="1"
                 android:text="Title"
                 android:textColor="@color/colorBlackText"
                 android:textSize="24dp" />
 
             <TextView
-                android:id="@+id/textView_Subtitle"
+                android:id="@+id/textView_Surup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/textView_Title"
+                android:layout_alignStart="@+id/textView_Title"
                 android:layout_below="@+id/textView_Title"
-                android:layout_marginLeft="16dp"
-                android:layout_toLeftOf="@+id/imageView"
-                android:layout_toStartOf="@+id/imageView"
+                android:layout_marginTop="16dp"
                 android:layout_weight="1"
-                android:text="Subtitle"
+                android:text="Surup"
+                android:textSize="14dp"
+                android:layout_toLeftOf="@+id/textView_Price"
+                android:layout_toStartOf="@+id/textView_Price" />
+
+            <TextView
+                android:id="@+id/textView_Additives"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/textView_Surup"
+                android:layout_alignLeft="@+id/textView_Surup"
+                android:layout_alignRight="@+id/textView_Surup"
+                android:layout_alignStart="@+id/textView_Surup"
+                android:layout_below="@+id/textView_Surup"
+                android:text="Additives"
                 android:textSize="14dp" />
 
             <TextView
                 android:id="@+id/textView_Free"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/textView_Subtitle"
-                android:layout_alignStart="@+id/textView_Subtitle"
-                android:layout_below="@+id/textView_Subtitle"
-                android:layout_toLeftOf="@+id/textView"
-                android:layout_toStartOf="@+id/textView"
+                android:layout_alignEnd="@+id/textView_Additives"
+                android:layout_alignLeft="@+id/textView_Additives"
+                android:layout_alignRight="@+id/textView_Additives"
+                android:layout_alignStart="@+id/textView_Additives"
+                android:layout_below="@+id/textView_Additives"
                 android:layout_weight="1"
                 android:text="Free"
                 android:textSize="14dp" />
 
             <LinearLayout
+                android:id="@+id/linearLayout2"
                 android:layout_width="match_parent"
                 android:layout_height="24dp"
-                android:layout_alignEnd="@+id/imageView"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignRight="@+id/imageView"
-                android:layout_below="@+id/imageView"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_alignEnd="@+id/textView_Price"
+                android:layout_alignRight="@+id/textView_Price"
+                android:layout_below="@+id/textView_Price"
                 android:orientation="horizontal"
                 android:weightSum="1">
 
-                <ImageView
-                    android:id="@+id/imageView_Copy"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginRight="16dp"
-                    app:srcCompat="@mipmap/ic_content_copy_black_24dp" />
-
-                <ImageView
-                    android:id="@+id/imageView_Edit"
-                    android:layout_width="24dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="16dp"
-                    app:srcCompat="@mipmap/ic_mode_edit_black_24dp" />
-
-                <ImageView
-                    android:id="@+id/imageView_Delete"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginRight="16dp"
-                    app:srcCompat="@mipmap/ic_delete_black_24dp" />
-
-                <ImageView
-                    android:id="@+id/imageView_Free"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    app:srcCompat="@mipmap/ic_money_off_black_24dp" />
-
-                <TextView
-                    android:id="@+id/textView_Price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:paddingRight="16dp"
-                    android:text="Price"
-                    android:textSize="20dp" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/textView_ID_AP"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView_Subtitle"
-                android:layout_toLeftOf="@+id/imageView"
-                android:layout_toStartOf="@+id/imageView"
+                android:layout_alignLeft="@+id/textView_Free"
+                android:layout_alignStart="@+id/textView_Free"
+                android:layout_below="@+id/textView_Free"
                 android:text="TextView"
                 android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/textView_Price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:paddingRight="16dp"
+                android:text="Price"
+                android:textSize="20dp"
+                android:layout_alignTop="@+id/textView_Surup"
+                android:layout_alignRight="@+id/imageView_menu"
+                android:layout_alignEnd="@+id/imageView_menu" />
 
         </RelativeLayout>
 
