--- a/app/src/main/res/layout/edit_drink_layout.xml
+++ b/app/src/main/res/layout/edit_drink_layout.xml
@@ -113,11 +113,11 @@
 
             </LinearLayout>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView_Additives"
+            <ListView
+                android:id="@+id/listView_Additives"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
+                android:layout_height="wrap_content"
+                android:choiceMode="multipleChoice" />
 
             <TextView
                 android:id="@+id/tv_line2"
@@ -269,7 +269,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/button_Add"
+                android:id="@+id/button_Save"
                 style="@android:style/Widget.Material.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -282,7 +282,7 @@
                 android:onClick="addApplication"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:text="Добавить"
+                android:text="Сохранить"
                 android:textColor="@color/colorBlackText" />
         </LinearLayout>
     </ScrollView>
