--- a/app/src/main/res/layout/list_item_check.xml
+++ b/app/src/main/res/layout/list_item_check.xml
@@ -1,12 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:textSize="20sp"
-    android:layout_height="match_parent"
-    android:gravity="center_vertical"
-    android:padding="30dp"
-    android:checkMark="?android:attr/textCheckMark"
-    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
-    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-    android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
-    android:paddingRight="?android:attr/listPreferredItemPaddingRight" />
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <TextView
+        android:id="@+id/textView_NameAdditives"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="40"
+        android:paddingBottom="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="16dp"
+        android:textAllCaps="false"
+        android:textColor="@color/md_black_1000"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/textView_ID_Additives"
+        android:layout_width="56dp"
+        android:layout_height="wrap_content"
+        android:paddingBottom="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="16dp"
+        android:textAllCaps="false"
+        android:textColor="@color/md_black_1000"
+        android:textSize="16sp"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/textView_PriceAdditives"
+        android:layout_width="121dp"
+        android:layout_height="wrap_content"
+        android:paddingBottom="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="16dp"
+        android:textAllCaps="false"
+        android:textColor="@color/md_black_1000"
+        android:textSize="16sp"
+        android:visibility="invisible" />
+
+    <CheckBox
+        android:id="@+id/checkBox_Additives2"
+        style="@android:style/Widget.Material.CompoundButton.CheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:layout_weight="1"
+        android:checked="false" />
+</LinearLayout>
